src/test/deca/codegen/invalid/resultats/method_call-ima.res
Erreur : Sortie de la fonction A.test sans instruction de retour.
